Archive2/a7/dd493d831a1d76/output
main.cpp: In function 'int main()':
main.cpp:7:36: error: invalid static_cast from type 'int*' to type 'char*'
     char* x = static_cast<char*>(pr);
                                    ^
main.cpp:7:11: warning: unused variable 'x' [-Wunused-variable]
     char* x = static_cast<char*>(pr);
           ^
