Archive2/a7/dd493d831a1d76/main.cpp
#include <iostream>
#include <string>
#include <vector>

int main() {
	int* pr = nullptr;
    char* x = static_cast<char*>(pr);
	return 0;
}